{
  "version": 4,
  "terraform_version": "1.15.0",
  "serial": 25,
  "lineage": "30c4d363-2317-e952-0c2b-09db9e6c567f",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "sql_vm_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.10.0.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2026-04-30T19:42:07.690-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/saproyecto-494423/regions/us-central1/addresses/deliver-eats-sqlserver-vm-internal-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "deliver-eats-sqlserver-vm-internal-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "saproyecto-494423",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/saproyecto-494423/regions/us-central1/addresses/deliver-eats-sqlserver-vm-internal-ip",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/saproyecto-494423/regions/us-central1/subnetworks/deliver-eats-subnet",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "deliver-eats-sqlserver-vm-internal-ip",
            "project": "saproyecto-494423",
            "region": "us-central1"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2026-04-30T19:41:44.439-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/saproyecto-494423/global/firewalls/deliver-eats-vpc-allow-internal",
            "log_config": [],
            "name": "deliver-eats-vpc-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/saproyecto-494423/global/networks/deliver-eats-vpc",
            "params": [],
            "priority": 1000,
            "project": "saproyecto-494423",
            "self_link": "https://www.googleapis.com/compute/v1/projects/saproyecto-494423/global/firewalls/deliver-eats-vpc-allow-internal",
            "source_ranges": [
              "10.10.0.0/20",
              "10.20.0.0/16",
              "10.30.0.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gke-nodes"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "name": "deliver-eats-vpc-allow-internal",
            "project": "saproyecto-494423"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-30T19:41:44.153-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/saproyecto-494423/global/firewalls/deliver-eats-vpc-allow-lb",
            "log_config": [],
            "name": "deliver-eats-vpc-allow-lb",
            "network": "https://www.googleapis.com/compute/v1/projects/saproyecto-494423/global/networks/deliver-eats-vpc",
            "params": [],
            "priority": 1000,
            "project": "saproyecto-494423",
            "self_link": "https://www.googleapis.com/compute/v1/projects/saproyecto-494423/global/firewalls/deliver-eats-vpc-allow-lb",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gke-nodes"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "name": "deliver-eats-vpc-allow-lb",
            "project": "saproyecto-494423"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_sqlserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1433"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-30T19:41:44.352-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/saproyecto-494423/global/firewalls/deliver-eats-vpc-allow-sqlserver",
            "log_config": [],
            "name": "deliver-eats-vpc-allow-sqlserver",
            "network": "https://www.googleapis.com/compute/v1/projects/saproyecto-494423/global/networks/deliver-eats-vpc",
            "params": [],
            "priority": 1000,
            "project": "saproyecto-494423",
            "self_link": "https://www.googleapis.com/compute/v1/projects/saproyecto-494423/global/firewalls/deliver-eats-vpc-allow-sqlserver",
            "source_ranges": [
              "10.10.0.0/20",
              "10.20.0.0/16",
              "10.30.0.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "sqlserver-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "name": "deliver-eats-vpc-allow-sqlserver",
            "project": "saproyecto-494423"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-30T19:41:45.586-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/saproyecto-494423/global/firewalls/deliver-eats-vpc-allow-ssh",
            "log_config": [],
            "name": "deliver-eats-vpc-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/saproyecto-494423/global/networks/deliver-eats-vpc",
            "params": [],
            "priority": 1000,
            "project": "saproyecto-494423",
            "self_link": "https://www.googleapis.com/compute/v1/projects/saproyecto-494423/global/firewalls/deliver-eats-vpc-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gke-nodes",
              "sqlserver-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "name": "deliver-eats-vpc-allow-ssh",
            "project": "saproyecto-494423"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "sqlserver_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260427",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 100,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/saproyecto-494423/zones/us-central1-a/disks/deliver-eats-sqlserver-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "creation_timestamp": "2026-04-30T19:42:11.639-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/saproyecto-494423/zones/us-central1-a/instances/deliver-eats-sqlserver-vm",
            "instance_id": "3378791096268729836",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "enable-oslogin": "FALSE"
            },
            "metadata_fingerprint": "rEIiOOg69pk=",
            "metadata_startup_script": "#!/usr/bin/env bash\r\nset -euo pipefail\r\n\r\nexport DEBIAN_FRONTEND=noninteractive\r\n\r\napt-get update\r\napt-get install -y ca-certificates curl docker.io\r\n\r\nsystemctl enable docker\r\nsystemctl start docker\r\n\r\ndocker pull mcr.microsoft.com/mssql/server:2022-latest\r\ndocker rm -f sqlserver \u003e/dev/null 2\u003e\u00261 || true\r\ndocker run -d \\\r\n  --name sqlserver \\\r\n  --restart unless-stopped \\\r\n  -e ACCEPT_EULA=Y \\\r\n  -e MSSQ [...]
            "name": "deliver-eats-sqlserver-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.42.141.92",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/saproyecto-494423/global/networks/deliver-eats-vpc",
                "network_ip": "10.10.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/saproyecto-494423/regions/us-central1/subnetworks/deliver-eats-subnet",
                "subnetwork_project": "saproyecto-494423",
                "vlan": 0
              }
            ],
            "project": "saproyecto-494423",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/saproyecto-494423/zones/us-central1-a/instances/deliver-eats-sqlserver-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "sqlserver-vm"
            ],
            "tags_fingerprint": "LZmX4msEUJc=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.sql_vm_internal",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/saproyecto-494423/global/networks/deliver-eats-vpc",
            "mtu": 0,
            "name": "deliver-eats-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "8463144093891537971",
            "numeric_id": "8463144093891537971",
            "project": "saproyecto-494423",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/saproyecto-494423/global/networks/deliver-eats-vpc"
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "deliver-eats-vpc",
            "project": "saproyecto-494423"
          },
          "dependencies": [
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2026-04-30T19:41:45.572-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/saproyecto-494423/regions/us-central1/subnetworks/deliver-eats-subnet",
            "ip_cidr_range": "10.10.0.0/20",
            "name": "deliver-eats-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/saproyecto-494423/global/networks/deliver-eats-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "saproyecto-494423",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.20.0.0/16",
                "range_name": "pods"
              },
              {
                "ip_cidr_range": "10.30.0.0/20",
                "range_name": "services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/saproyecto-494423/regions/us-central1/subnetworks/deliver-eats-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 5532525923139169286
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "deliver-eats-subnet",
            "project": "saproyecto-494423",
            "region": "us-central1"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.compute"
          ]
        }
      ]
    }
  ]
}